create github pages

--- a/page2.html
+++ b/page2.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
 
     
 
@@ -191,7 +191,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AQ5qK0LRq0t7qrZnuQKI4Z68JpPHVo6eHC4i85WYnGVJ30IEfgI6Mj+2Rbk0EZ4JA+AIHvoan3PohdluBhHuvwE5eBT6KajalrINboFU+7h5J2ERm07PM6jkuG7W4a0F">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qd7hJ19MbUf9Y+ShRjnWTDMSH0x8tEyXmpTMPTRLON63RvgAwNNRMMYUm62ArPKSrSoDhV2v9R+9TCJGinnRnTDn6VQDUC4OWBvRRVCd7v4TIkac3RopuNsyZD06moqg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
