--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/page4-meta.jpeg">
   <meta name="twitter:title" content="Projects">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/richgen-logo-174x173.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/finding-the-dream-of-every-owner.-90x90.png" type="image/x-icon">
   <meta name="description" content="Finding The Dream For Every Owner.">
   
   
@@ -48,10 +48,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                        <img src="assets/images/richgen-logo-174x173.jpeg" alt="Mobirise" title="" style="height: 5rem;">
+                        <img src="assets/images/finding-the-dream-of-every-owner.-90x90.png" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +61,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html">
                         Our Projects</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="page2.html">
                         Join Our Team</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:+63-906-712-7565">
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
 
     
 
@@ -498,7 +498,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VOh8VVg9YKH45Jy+G2FVJtHl9UM9rQSU2pVyBls/p22RDepvKlDSs5jg1A+im9wxDFc7v69TksI0L32Gdp1H3RmiImbO2tIKCdoKZLhD1L6YKbx9hfzLafz5yAbeFVBF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y1UWAkPsWeHuHxVxRljGZ9ziV31YYppxTbyWmiaoVoOQG8lgDCk6VTvyZh4vV0HEAgiwX0HdPnTVuJ2RVuKUpXrIx7gywC7Wcy+xj9Jt0A/vQvzYBHGLm9tPlefnCjDf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -521,7 +521,7 @@
                             <label for="message-form1-14" class="form-control-label mbr-fonts-style display-7">Message</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-14"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4"><span class="socicon socicon-mail mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>GET A QUOTE</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="mailto:richgenmarketing@gmail.com"><span class="socicon socicon-mail mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>GET A QUOTE</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
