create github pages

--- a/page2.html
+++ b/page2.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
 
     
 
@@ -194,7 +194,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="68UbMz23KJy5trhKFnrGtYc9OLNJcCK3bZh3QMj8k0qgRu1jAyDvsiP9NzoQLjvDwBdyTw+BIwe4AEuh+y3pdGss6TVcjt9vP7pA82QTS3Pj5gUhTmcHt80m7/X9SAbh">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DNKSmKvGl9CQDWuxlx8b54kTCRyDw80K0hYKkzXOR9mBEwtTUpfU1miqeQoXQ68XyLKzCjN9DrTftzetxm8MLwxUeT9moLFhUbd4Qh/r2aWuMOgg7pimoYlrXmR8WTOO">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
