--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/page4-meta.jpeg">
   <meta name="twitter:title" content="Projects">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/finding-the-dream-of-every-owner.-90x90.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/richgen-properties-logo-160x160.jpeg" type="image/x-icon">
   <meta name="description" content="Finding The Dream For Every Owner.">
   
   
@@ -48,20 +48,20 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                        <img src="assets/images/finding-the-dream-of-every-owner.-90x90.png" alt="Mobirise" title="" style="height: 6rem;">
+                        <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
                         Our Projects</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         Join Our Team</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:+63-906-712-7565">
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
 
     
 
@@ -84,7 +84,7 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">
                         OUR PROJECTS           </h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-2">3 things you can do on your Investment:</p>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-2"><em>3 things you can do on your Investment:</em></p>
                     
 
                     <div class="icons-media-container mbr-white">
@@ -498,7 +498,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s+ks5Z8bxPizp7WdShoYibQm70BmiOMvXPZiG4tE9Avavx4KZ5Ioo0FWHS9ZROSYrytSStLdrJveLRZ5QX8L4yLkL1x3u6iW3al2LsJq2EktRvbCoo8MEILAi2cEexhu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t7Zg9D8UU2iJNJtFzM8WybiDT9NMhmddehgf0YwqL7tc8Z6Y2Jsjz9gZl3PMORBlL2rLzeLvqEjMkTGkbb+0l/rezHk2A8l/N26rYSohwmQVXAsGLZahnTrSnMT2M7jN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -553,18 +553,18 @@
                 <h5 class="pb-3">
                     Contacts
                 </h5>
-                <p class="mbr-text">
-                    Email: richgenmarketing@gmail.com
-                    <br>Phone: +63 906 712 7565 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
+                <p class="mbr-text">Email: richgenmarketing@gmail.com 
+<br>Phone: 
+<br>+63 906 7127565 &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Links
                 </h5>
                 <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.co/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.co/">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.co/">Download for Mac</a>
+                    <a class="text-primary" href="index.html">Website builder</a>
+                    <br><a class="text-primary" href="index.html">Download for Windows</a>
+                    <br><a class="text-primary" href="index.html">Download for Mac</a>
                 </p>
             </div>
         </div>
@@ -577,7 +577,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2020 RichGen Club - All Rights Reserved
+                        © Copyright 2020 RichGen Properties - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
