--- a/page1.html
+++ b/page1.html
@@ -45,17 +45,17 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html">
                         Our Projects</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="page2.html">
                         Join Our Team</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:+63-906-712-7565">
@@ -67,7 +67,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
