--- a/page2.html
+++ b/page2.html
@@ -50,17 +50,17 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html">
                         Our Projects</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="page2.html">
                         Join Our Team</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:+63-906-712-7565">
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
 
     
 
@@ -193,7 +193,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v2JLmPv35xeqV7ySEmAGxdyjH8LxU+di0+lGBf++Yj3cX2LwauyiTGJctpj6jsg5iy4me0Rp96pLaDggYdwTGmX0lDaU9EpnK7fMlJrafTzVfvBP5ZGfgiifKjtw6qhO">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pLiVDR8/yUiJ/CgMebUqS4EG40IW/5PnMi41pz71fU82IJTwvNmqXyOGiYF8DOrfbx31XuaDbrNq5NEwT4LbIszKtwZASSGd9vnVubl9++gmL2p8ycJQ3Dbra3BfD2Sp">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
