--- a/page4.html
+++ b/page4.html
@@ -51,17 +51,17 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html">
                         Our Projects</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-white display-4" href="page2.html">
                         Join Our Team</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="tel:+63-906-712-7565">
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
 
     
 
@@ -498,7 +498,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t7Zg9D8UU2iJNJtFzM8WybiDT9NMhmddehgf0YwqL7tc8Z6Y2Jsjz9gZl3PMORBlL2rLzeLvqEjMkTGkbb+0l/rezHk2A8l/N26rYSohwmQVXAsGLZahnTrSnMT2M7jN">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TtU/HGMDVXNcvvnWmR1WJx6qbLBmmL3Xb55Vyk4CEDjLnkhW0CrBP8JCSzC2Q41xvMf779P2Xx1BPDWq/VleSN4oOHzEJqvRv6hhWdy+LqFD1i65/UJXaRBJB5DM16b+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
