create github pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="header6 cid-s7wucnq2lg mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=i0-0rUxtzp4" id="header6-m">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header6 cid-s7wucnq2lg mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=i0-0rUxtzp4" id="header6-m">
 
     
 
