--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="cid-s7BkTw9EOK mbr-fullscreen mbr-parallax-background" id="header2-16">
 
     
 
@@ -193,7 +193,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pLiVDR8/yUiJ/CgMebUqS4EG40IW/5PnMi41pz71fU82IJTwvNmqXyOGiYF8DOrfbx31XuaDbrNq5NEwT4LbIszKtwZASSGd9vnVubl9++gmL2p8ycJQ3Dbra3BfD2Sp">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P++2sJ6u0xQY2PZ3++W4JO0kXtK13KCJW9mfAAcH8/iLkaOeq/OOgPrFmuQYk1CMUFDvvcIwn1Yj0UHi/u7U6ZUZu6p4guBJ7v6GudZzfTNbZkBiT/7MRnbKmSYYJx8m">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
