--- a/page3.html
+++ b/page3.html
@@ -47,7 +47,7 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header12 cid-s9TPLF3oNF mbr-parallax-background" id="header12-19">
+<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="header12 cid-s9TPLF3oNF mbr-parallax-background" id="header12-19">
 
     
 
