--- a/page4.html
+++ b/page4.html
@@ -51,7 +51,7 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header12 cid-s7wxyfwZsF mbr-parallax-background" id="header12-r">
 
     
 
@@ -498,7 +498,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TtU/HGMDVXNcvvnWmR1WJx6qbLBmmL3Xb55Vyk4CEDjLnkhW0CrBP8JCSzC2Q41xvMf779P2Xx1BPDWq/VleSN4oOHzEJqvRv6hhWdy+LqFD1i65/UJXaRBJB5DM16b+">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ir5QyyP4kBtJz+GFOmlX4mcpzZEI7k+aaEyL7CC1fqmKcF8fxLLt8B2aGYXSVrhjrMYEgUL7OQu9JQ3qbFDQC7MsFzSeJOo/rOGKcGoieFEyU4PGxcX9pG77SR3JDE8e">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
