--- a/page1.html
+++ b/page1.html
@@ -45,7 +45,7 @@
                         <img src="assets/images/richgen-properties-logo-160x160.jpeg" alt="" title="RichGen Properties" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://mobirise.co">RichGen Properties</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobirise.co">RichGen Properties</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
